<resources>
    <string name="app_name">Calendar</string>
    <string name="view_date_text">View Date</string>
    <string name="test">Testing</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_text">Enter the date of the task here…</string>
    <string name="title_text">Enter the title of the task here…</string>
    <string name="description">Enter the description of the task here…</string>
    <string name="duration">Estimated duration…</string>
    <string name="start_time">Starting Time…</string>
    <string name="view_task">View Task</string>
    <string name="year_text">YYYY</string>
    <string name="month_text">MM</string>
    <string name="day_text">DD</string>
    <string name="add_task">Add Task</string>
    <string name="minute_text">mm</string>
    <string-array name="hour_text">
        <item>HH</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

</resources>
