<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.matt.calendar.TaskActivity"
    android:columnCount="3"
    android:layout_rowSpan="1"
    android:rowCount="10"
    android:orientation="vertical">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/task_year"
            android:inputType="number"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:layout_gravity="fill_horizontal"
            android:maxLength="4"
            android:focusable="false"
            android:hint="@string/year_text"/>
        <EditText
            android:id="@+id/task_month"
            android:inputType="number"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:layout_gravity="fill_horizontal"
            android:maxLength="2"
            android:focusable="false"
            android:hint="@string/month_text"/>
        <EditText
            android:id="@+id/task_day"
            android:inputType="number"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:layout_gravity="fill_horizontal"
            android:maxLength="2"
            android:focusable="false"
            android:hint="@string/day_text"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/task_start_time"
            android:inputType="none"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:layout_span="1"
            android:focusable="false"
            android:hint="@string/start_time"/>
        <EditText
            android:id="@+id/task_duration"
            android:inputType="number"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:layout_span="1"
            android:hint="@string/duration"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/task_title"
            android:inputType="textCapSentences|textAutoComplete|textAutoCorrect"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:layout_gravity="start"
            android:layout_span="3"
            android:maxLines="1"
            android:maxLength="50"
            android:hint="@string/title_text"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/task_description"
            android:inputType="textCapSentences|textMultiLine"
            android:autoText="true"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:minLines="2"
            android:maxLines="4"
            android:maxLength="2000"
            android:layout_height="wrap_content"
            android:layout_span="3"
            android:imeOptions="actionNext"
            android:hint="@string/description"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/add_task"
            android:layout_weight="1"
            android:layout_span="3"
            android:text="@string/add_task">

        </Button>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/task_test"
            android:inputType="text|textMultiLine"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:layout_span="3"
            android:hint="@string/test"/>
    </TableRow>
<!--




-->



</TableLayout>
